==> betaflight/betaflight/src/platform/PICO/uart/serial_uart_pico.c <==
#include <stdbool.h>
#include <stdint.h>
#include "platform.h"
#include "build/build_config.h"
#include "drivers/system.h"
#include "drivers/io.h"
#include "drivers/serial.h"
#include "drivers/serial_uart.h"
#include "drivers/serial_impl.h"
#include "drivers/serial_uart_impl.h"
#include "hardware/irq.h"
#include "hardware/uart.h"
#include "serial_uart_pico.h"

uartPort_t *serialUART(uartDevice_t *uartdev, uint32_t baudRate, portMode_e mode, portOptions_e options)
{
    bprintf("\nserialUART");
    uartPort_t *s = &uartdev->port;
    const uartHardware_t *hardware = uartdev->hardware;

    IO_t txIO = IOGetByTag(uartdev->tx.pin);
    IO_t rxIO = IOGetByTag(uartdev->rx.pin);

    if (!txIO && !rxIO) {
        bprintf("serialUART no pins mapped for device %p", s->USARTx);
        return NULL;
    }

    // SERIAL_PORT_UART0, 1, 2, 3, ...
    const serialPortIdentifier_e identifier = s->port.identifier;

    bool uartInitialised;
    if (isHardwareUART(identifier)) {
        uartInitialised = serialUART_hw(baudRate, mode, options,
                                              hardware, identifier, txIO, rxIO);
    } else {
        uartInitialised = serialUART_pio(baudRate, mode, options,
                                              hardware, identifier, txIO, rxIO);
    }

    if (!uartInitialised) {
        bprintf("* Failed to initialised uart device %p, id %d", hardware->reg, identifier);
        return NULL;
    }

    s->port.vTable = uartVTable;
    s->port.baudRate = baudRate; // TODO set by caller?
    s->port.rxBuffer = hardware->rxBuffer;
    s->port.txBuffer = hardware->txBuffer;
    s->port.rxBufferSize = hardware->rxBufferSize;
    s->port.txBufferSize = hardware->txBufferSize;

    s->USARTx = hardware->reg;
    bprintf("====== setting USARTx to reg == %p", s->USARTx);
    return s;
}

void uartEnableTxInterrupt(uartPort_t *uartPort)
{
    if (uartPort->port.txBufferTail == uartPort->port.txBufferHead) {
        return;
    }

    const serialPortIdentifier_e identifier = uartPort->port.identifier;
    if (isHardwareUART(identifier)) {
        uartEnableTxInterrupt_hw(uartPort);
    } else {
        uartEnableTxInterrupt_pio(uartPort);
    }
}

void uartReconfigure(uartPort_t *s)
{
    const serialPortIdentifier_e identifier = s->port.identifier;
    if (isHardwareUART(identifier)) {
        uartReconfigure_hw(s);
    } else {
        uartReconfigure_pio(s);
    }
}
